--- a/document.tex
+++ b/document.tex
@@ -1,6 +1,8 @@
 %% Esempio per lo stile supsi
 \documentclass[twoside]{supsistudent} 
 \usepackage{graphicx}
+\usepackage{subcaption}
+
 % per settare noindent
 \setlength{\parindent}{0pt}
 
@@ -130,32 +132,72 @@ nelle sottosezioni directives, models, modules, services e shared. I
 stile e funzione rispettivamente secondo i linguaggi \textbf{HTML5}, 
 \textbf{SCSS} e \textbf{TypeScript}.
 
-\subsection{Sottosezione}
+\chapter{Funzionamento}
 
-\texttt{Questo testo ha una spaziatura fissa}
+\section{Processo di tagging}
 
-\textit{Questo testo \`e in italico}
+Il processo di tagging può venire effettuato solo dopo il caricamento di un 
+albero di tagging e dopo la selezione di un documento, operazioni eseguibili
+nelle apposite sezioni del tool. 
 
-\textbf{Questo testo \`e in grassetto}
+\subsection{Floating menu}
 
-\textsc{Questo testo \`e in maiuscoletto}
+La procedura effettiva di tagging viene effettuata selezionando del testo, al
+completamento di questa operazione apparirà un menu alla fine della selezione,
+contenente l'albero di tagging dal quale l'utente potrà andare a scegliere
+quale tag attrubuire alla selezione.
 
-\underline{Questo testo \`e sottolineato} \\
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=7cm]{figures/floatingTag.png}
+  \caption{Floating Tagging Menu}
+  \label{fig:floatingTag}
+\end{figure}
 
-Citazione:
-\begin{quote}
-\lipsum[23]
-\end{quote}
+\pagebreak
 
-\chapter{Titolazione}
+\subsection{Nested tags}
 
-\lipsum[13]
+Il tagging può essere effettuato a più livelli, quindi un tag (o più) possono
+essere contenuti in un altro tag (o più).
 
-\begin{itemize}
-  \item Elemento A
-  \item Elemento B
-  \item Elemento C
-\end{itemize}
+\begin{figure}[h!]
+  \includegraphics[width=\linewidth]{figures/nestedTags.png}
+  \caption{Nested Tags Example}
+  \label{fig:nestedTags}
+\end{figure}
+
+\subsection{Tag removal}
+
+I tag sono facilmente rimovibili semplicemente cliccando su di essi.
+
+\begin{figure}[h!]
+  \centering
+  \begin{subfigure}[b]{0.4\linewidth}
+    \includegraphics[width=\linewidth]{figures/tagRemoval1.png}
+    \caption{Before the click}
+  \end{subfigure}
+  \begin{subfigure}[b]{0.4\linewidth}
+    \includegraphics[width=\linewidth]{figures/tagRemoval2.png}
+    \caption{After the click}
+  \end{subfigure}
+  \caption{Tag Removal Example}
+  \label{fig:tagRemoval}
+\end{figure}
+
+
+%Citazione:
+%\begin{quote}
+%\lipsum[23]
+%\end{quote}
+
+%\lipsum[13]
+
+%\begin{itemize}
+%  \item Elemento A
+%  \item Elemento B
+%  \item Elemento C
+%\end{itemize}
 
 %\begin{itemize}
 %  \item[-] Elemento A
@@ -169,7 +211,7 @@ Citazione:
 %  \item Gamma
 %\end{enumerate}
 
-\lipsum[23]
+%\lipsum[23]
 %\section{Sezione}
 %
 %\lipsum[23]
