Add tag view to chapter 2

--- a/document.tex
+++ b/document.tex
@@ -167,6 +167,18 @@ essere contenuti in un altro tag (o più).
   \label{fig:nestedTags}
 \end{figure}
 
+\subsection{Tag View}
+
+Una volta taggata uan parte di testo, è possibile vedere quale tag è applicato
+in quella sezione semplicemente portando il cursore sopra il suddetto tag.
+
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=7cm]{figures/sample.jpg}
+  \caption{Tag View}
+  \label{fig:tagView}
+\end{figure}
+
 \subsection{Tag removal}
 
 I tag sono facilmente rimovibili semplicemente cliccando su di essi.
