Add chapter 4: Problemi riscontrati

--- a/document.tex
+++ b/document.tex
@@ -300,6 +300,25 @@ corretto funzionamento e comportamento delle funzionalità del tool.
 Anche qui \textit{npm} si rende utile, potendo appunto definire uno
 \textit{script} di testing che lancerà le varie \textit{test suites} per il
 controllo tramite il comando \textbf{npm test}.
+
+\chapter{Problemi Riscontrati}
+
+\section{Nuovo ambiente}
+
+Un grosso problema è stato il "nuovo ambiente" con cui ci si è dovuti 
+confrontare quale il mondo di \textit{Angular}. Essendo un requisito imposto
+abbiamo dovuto adattarci ed imparare il framework nel minor tempo possibile
+per essere subito operativi e concentrarci sulla funzionalità del tool e le
+features richieste.
+
+\section{Comprensione differente}
+
+All'inizio del progetto ci sono state piccole incomprensioni che hanno portato
+ad un'errata implementazione, come anche lo scoprire a progetto già inoltrato
+che l'albero di tagging avesse delle condizioni di tagging come restrizioni
+di tipo simil-logico sul concetto di \textit{either-or} o \textit{if-then}.
+
+
 %Citazione:
 %\begin{quote}
 %\lipsum[23]
