Progetto di diploma => Progetto di semestre

--- a/document.tex
+++ b/document.tex
@@ -26,7 +26,7 @@
 \relatore{Daniele Puccinelli}
 \correlatore{Salvatore Vanini}
 \corso{Ingegeneria Informatica}
-\modulo{M00009 - Progetto di diploma}
+\modulo{M02042 - Progetto di semestre}
 \anno{2019}
 
 
