--- a/document.tex
+++ b/document.tex
@@ -385,6 +385,6 @@ possibile sarebbe quella di interfacciare il tool con il lavoro del masterando
 e quindi al momento dell'upload di un documento effettuare questo tagging
 automatico iniziale sul quale poi l'utente andrà a lavorare.
 
-\bibliographystyle{unsrt}
-\bibliography{bibliografia}
+%\bibliographystyle{unsrt}
+%\bibliography{bibliografia}
 \end{document}
