Remove list of tables

--- a/document.tex
+++ b/document.tex
@@ -45,7 +45,7 @@
 \pagenumbering{roman}
 \tableofcontents
 \listoffigures					% Opzionale
-\listoftables					% Opzionale
+%\listoftables					% Opzionale
 
 \newpage
 \mainmatter
