--- a/document.tex
+++ b/document.tex
@@ -56,8 +56,8 @@
 \textit{DocTT} (Document Tagging Tool) is a tagging tool (corpus annotation 
 tool) which allows its users to tag text documents such as press conferences,
 conference calls or pitches.
-DocTT satisfies the need to switch from outdated tools such as 
-\href{http://www.corpustool.com/}{UAM Corpus Tool} in order to provide an easy,
+\textit{DocTT} satisfies the need to switch from outdated tools such as 
+\textit{\href{http://www.corpustool.com/}{UAM Corpus Tool}} in order to provide an easy,
 open source, multi-platform, lightweight and customizable tool to replace 
 these outdated tools. \\
 The tags take form in colored rectangles surrounding the text and allowing 
@@ -72,16 +72,17 @@ suddividere parti di testo ed assegnare delle etichette a parti di discorsi.
 Il suo impiego principale è il tagging di conference calls, pitches o documenti
 testuali in generale.
 
-DocTT soddisfa il bisogno di cambiamento "imposto" da tool come 
-\href{http://www.corpustool.com/}{UAM Corpus Tool} e fornisce 
-un'alternativa open source multi-piattaforma, leggera e personalizzabile
+\textit{DocTT} soddisfa il bisogno di cambiamento motivato dalla 
+relativamente scarsa user-friendliness di tool come
+\textit{\href{http://www.corpustool.com/}{UAM Corpus Tool}}
+e fornisce un'alternativa open source multi-piattaforma, leggera e personalizzabile
 per rimpiazzare questi strumenti. \\
 \\
-I tag sono rappresentati da rettangoli arrotondati e colorati che
+I tag sono rappresentati da rettangoli smussati e colorati che
 circondano il testo, in modo da fornire un veloce riconoscimento di parti del
 discorso. I tag sono definiti mediante un albero caricato precedentemente
 dall'utente. I file utilizzati (file di documento e dell'albero) seguono
-lo standard XML e le convenzioni di UAM Corpus Tool. La loro interpretazione
+lo standard XML e le convenzioni di \textit{UAM Corpus Tool}. La loro interpretazione
 è gestita dal nostro strumento.
 
 \chapter{Introduzione}
